# universal-optimizer

./: .gitignore  CONTRIBUTING.md  IMPROVEMENTS_2023.md  LICENSE  NOTICE  README.md  SECURITY.md  all-opt-so-comb-ones-count-max.cmd  all-opt-so-glob-function-one-variable-max.cmd  example-maxones-vns-batch.cmd  example-maxones-vns.cmd  example-opt-comb-ones-count-max-all.cmd  example-opt-so-glob-function-one-variable-max-all.cmd  example-vns-batch.cmd  example_fuction_1_variable_maximization_exec.py  example_fuction_one_variable_max_vns_int_exec.py  example_fuction_one_variable_vns_int_exec.py  example_max_fuction_1_variable_vns_int_exec.py  example_max_ones_ilp_exec.py  example_max_ones_te_bitarray_exec.py  example_max_ones_vns_bitarray_exec.py  example_max_ones_vns_int_exec.py  example_max_ones_vns_int_exec_build.py  example_maxones_bitarray_vns_exec.py  example_maxones_int_vns_exec.py  example_maxones_int_vns_exec_build.py  example_maxones_te_bitarray_exec.py  example_maxones_vns_bitarray_exec.py  example_maxones_vns_int_app.py  example_maxones_vns_int_build.py  example_maxones_vns_int_exec.py  example_maxones_vns_int_exec_build.py  example_maxones_vns_int_opt.py  example_maxones_vns_int_uo.py  example_maxones_vns_int_use.py  example_ones_count_ilp_exec.py  example_ones_count_max_ilp_exec.py  example_ones_count_max_te_bitarray_exec.py  example_ones_count_max_vns_bitarray_exec.py  example_ones_count_max_vns_int_exec.py  (+55 more)
comparison/: to-do.txt
docs/: changelog.html  contribution.html  genindex.html  how_to_guides.html  implemented_algorithms.html  index.html  objects.inv  (+85 more)
(+795 files in other folders)
